--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -12,14 +12,16 @@
       <mat-label>Add Category</mat-label>
       <input matInput type="text" formControlName="name">
     </mat-form-field>
-    <button mat-raised-button color="accent" [disabled]="categoryForm.invalid">Add</button>             
+    <button mat-mini-fab color="accent" [disabled]="categoryForm.invalid" aria-label="Add">
+      <mat-icon>add</mat-icon>
+    </button>
   </form>
 </div>
 
 
 
 <ng-template #loader>
-	<div>
-		<mat-spinner color="accent" diameter="30"></mat-spinner>
-	</div>
+  <div>
+    <mat-spinner color="accent" diameter="30"></mat-spinner>
+  </div>
 </ng-template>
