--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="categoryForm" class="add-data">
+  <form [formGroup]="addForm" class="add-data">
     <mat-form-field appearance="fill">
       <mat-label>Select Area</mat-label>
       <mat-select formControlName="area">
@@ -10,15 +10,18 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Add Category</mat-label>
-      <input matInput type="text" formControlName="name">
+      <input matInput type="text" formControlName="name" />
     </mat-form-field>
-    <button mat-mini-fab color="accent" [disabled]="categoryForm.invalid" aria-label="Add">
+    <button
+      mat-mini-fab
+      color="accent"
+      [disabled]="addForm.invalid"
+      aria-label="Add"
+    >
       <mat-icon>add</mat-icon>
     </button>
   </form>
 </div>
-
-
 
 <ng-template #loader>
   <div>
