--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -1,13 +1,17 @@
 .add-data {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
+  background: #151831;
+  padding: 20px 20px 00px 20px;
   > *:not(button) {
     flex-grow: 1;
     min-width: 250px;
+    margin-right: 10px;
   }
   button {
     align-self: center;
+    margin-bottom: 20px;
   }
 }
