--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -15,3 +15,20 @@
     margin-bottom: 20px;
   }
 }
+
+.mat-list-base {
+  .mat-list-item {
+    border-bottom: 1px solid #313131;
+    .content {
+      flex-grow: 1;
+      margin: 0;
+    }
+    &:last-child {
+      border-bottom: 0;
+    }
+  }
+}
+
+button.mat-button-base {
+  border: 0;
+}
