--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -23,18 +23,46 @@
   </form>
   <div>
     <mat-list>
-      <mat-list-item *ngFor="let category of categories$ | async">
-        <div class="content mat-title">{{ category.value }}</div>
-        <button mat-icon-button>
-          <mat-icon>create</mat-icon>
-        </button>
-        <button mat-icon-button>
-          <mat-icon>delete_outline</mat-icon>
-        </button>
+      <mat-list-item
+        *ngFor="let category of categories$ | async"
+        [ngClass]="{'isEditing': category.isEditing}"
+      >
+        <ng-container *ngIf="!category.isEditing; else editing">
+          <div class="content mat-title">{{ category.value }}</div>
+          <button mat-icon-button (click)="toggle(category)">
+            <mat-icon>create</mat-icon>
+          </button>
+          <button mat-icon-button>
+            <mat-icon>delete_outline</mat-icon>
+          </button>
+        </ng-container>
       </mat-list-item>
     </mat-list>
   </div>
 </div>
+
+<ng-template #editing>
+  <form [formGroup]="editForm" class="content edit-data">
+    <mat-form-field appearance="fill">
+      <mat-label>Select Area</mat-label>
+      <mat-select formControlName="area">
+        <mat-option class="mat-subheading-1" value="general-knowledge">
+          general-knowledge
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Add Category</mat-label>
+      <input matInput type="text" formControlName="name" />
+    </mat-form-field>
+  </form>
+  <button mat-icon-button (click)="toggle(category)">
+    <mat-icon>done</mat-icon>
+  </button>
+  <button mat-icon-button (click)="toggle(category)">
+    <mat-icon>close</mat-icon>
+  </button>
+</ng-template>
 
 <ng-template #loader>
   <div>
